conference 제출예정 업데이트

--- a/index.html
+++ b/index.html
@@ -2779,6 +2779,57 @@
                     </div>
                   </div>
 
+                  <!-- Conference 제출예정 연번2 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          Late Breaking Results: A General Purpose
+                          Compute-in-Memory Architecture with ADC-Awared Neural
+                          Networks
+                        </h5>
+                        <p class="card-text">2024.02</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >DAC: LBR 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >M.-G. Song</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap text-end"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
                   <!-- Conference 연번12 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
@@ -2820,6 +2871,121 @@
                         </li>
                         <li
                           class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 제출예정 연번3 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          A 2T1C eDRAM-based Compute-In-Memory Macro with 8-to-1
+                          Column Multiplexing Scheme for Highly Sparse Binarized
+                          Deep Neural Networks
+                        </h5>
+                        <p class="card-text">2024.05</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >ISOCC 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
+                          <span class="badge bg-secondary me-2">S.-M. Jin</span>
+                          <span class="badge bg-secondary me-2"
+                            >M.-G. Song</span
+                          >
+                          <span class="badge bg-secondary me-2">D.-H. Lee</span>
+                          <span class="badge bg-secondary me-2"
+                            >W.-S. Jung</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap text-end"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 제출예정 연번4 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with
+                          Autocovariance-based Frequency Detector in 40-nm CMOS
+                          Technology
+                        </h5>
+                        <p class="card-text">2024.06</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >ASSCC 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >H.-S. Choi</span
+                          >
+                          <span class="badge bg-secondary me-2">J.-G. Lee</span>
+                          <span class="badge bg-secondary me-2">K.-H. Lee</span>
+                          <span class="badge bg-secondary me-2">D. Koh</span>
+                          <span class="badge bg-secondary me-2"
+                            >J.-W. Sull</span
+                          >
+                          <span class="badge bg-secondary me-2">H.-R. Do</span>
+                          <span class="badge bg-secondary me-2">C.-H. Kye</span>
+                          <span class="badge bg-secondary me-2"
+                            >D.-K. Jeong</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap text-end"
                         >
                           <a class="card-text" href="..."></a>
                         </li>
@@ -2983,6 +3149,7 @@
                       </ul>
                     </div>
                   </div>
+
                   <!-- Conference 연번3 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
@@ -3119,6 +3286,56 @@
                           <span class="badge bg-secondary me-2">D.-H. Heo</span>
                           <span class="badge bg-secondary me-2">J.-H. Lee</span>
                           <span class="badge bg-secondary me-2">S.-M. Jin</span>
+                          <span class="badge bg-secondary me-2"
+                            >M.-S. Choo</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-success">KEYWORD</span>
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap text-end"
+                        >
+                          <a class="card-text" href="..."></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+
+                  <!-- Conference 제출예정 연번1 -->
+                  <div class="col-md-6">
+                    <div class="card pub-card mb-4">
+                      <img
+                        src="img/dummy3-img.png"
+                        class="card-img-top"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">
+                          IGA: A General Purpose Compute-in-Memory Architecture
+                          with ADC-Awared Neural Networks
+                        </h5>
+                        <p class="card-text">2023.12</p>
+                      </div>
+                      <ul class="list-group list-group-flush">
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-warning text-dark"
+                            >DATE: LBR 2024</span
+                          >
+                        </li>
+                        <li
+                          class="list-group-item d-flex align-items-center flex-wrap"
+                        >
+                          <span class="badge bg-secondary me-2"
+                            >M.-G. Song</span
+                          >
+                          <span class="badge bg-secondary me-2"
+                            >S.-U. Kang</span
+                          >
                           <span class="badge bg-secondary me-2"
                             >M.-S. Choo</span
                           >
