학회이미지 업뎃

--- a/index.html
+++ b/index.html
@@ -2493,7 +2493,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con6.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2544,7 +2544,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con7.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2593,7 +2593,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con8.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2639,7 +2639,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con9.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2686,7 +2686,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con10.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2734,7 +2734,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con11.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2783,7 +2783,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/conn2.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2834,7 +2834,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con12.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2882,7 +2882,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/dummy3.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -2997,7 +2997,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con13.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -3052,7 +3052,7 @@
                   <!-- Conference 연번1 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img src="img/c8.png" class="card-img-top" alt="..." />
+                      <img src="img/con1.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Radiation-Hardened Processing-In-Memory Crossbar Array
@@ -3104,7 +3104,7 @@
                   <!-- Conference 연번2 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img src="img/c7.png" class="card-img-top" alt="..." />
+                      <img src="img/con2.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Direct Phase Control in Digital Phase-Locked Loop
@@ -3154,7 +3154,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con3.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -3210,7 +3210,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con4.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -3260,7 +3260,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/con5.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -3308,7 +3308,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/conn1.png"
                         class="card-img-top"
                         alt="..."
                       />
@@ -3366,7 +3366,7 @@
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
                       <img
-                        src="img/dummy3-img.png"
+                        src="img/dummy3.png"
                         class="card-img-top"
                         alt="..."
                       />
