News gallery 수상실적 json으로 업데이트

--- a/index.html
+++ b/index.html
@@ -260,93 +260,8 @@
                 </button>
               </a>
             </div>
-            <div class="gallery-card-container news-gallery-items">
-              <div class="card">
-                <img
-                  src="img/award/240621_[SCCuD] Efficient Processing in Memory design methodology with emulated neural networks for AI inferencing applications 연구 발표 상장.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <h5 class="card-title">
-                    [SCCuD] Efficient Processing in Memory design methodology
-                    with emulated neural networks for AI inferencing
-                    applications 연구 발표 상장
-                  </h5>
-                  <p class="card-text">24.06.21</p>
-                </div>
-              </div>
+            <div class="news-gallery-items gallery-card-container"></div>
 
-              <div class="card">
-                <img
-                  src="img/award/240511_2024 가천대 SOC 학술대회 우수발표논문상_송민권.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <h5 class="card-title">
-                    2024 가천대 SOC 학술대회 우수발표논문상_송민권
-                  </h5>
-                  <p class="card-text">24.05.11</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <img
-                  src="img/award/240130_ICEIC_허동회.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <h5 class="card-title">
-                    ICEIC 2024 Best Paper Award Gold Prize_허동회
-                  </h5>
-                  <p class="card-text">24.01.30</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <img
-                  src="img/award/231222_[SCCuD]PIM simulation 테크닉 연구 발표 상장.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <h5 class="card-title">
-                    [SCCuD]PIM simulation 테크닉 연구 발표 상장
-                  </h5>
-                  <p class="card-text">23.12.22</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <img
-                  src="img/award/231222_[SCCuD] DSP BASED RECEIVER behavioral modeling 상장.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <h5 class="card-title">
-                    [SCCuD] DSP BASED RECEIVER behavioral modeling 상장
-                  </h5>
-                  <p class="card-text">23.12.22</p>
-                </div>
-              </div>
-
-              <div class="card">
-                <img
-                  src="img/award/231201_ICASS_IEEE_박규란_장인우.jpg"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <h5 class="card-title">
-                    ICASS_IEEE_Best Student Design Award_박규란_장인우
-                  </h5>
-                  <p class="card-text">23.12.01</p>
-                </div>
-              </div>
-            </div>
             <hr />
             <h5>Timeline</h5>
             <ul class="news-ul">
@@ -2492,11 +2407,7 @@
                   <!-- Conference 연번6 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con6.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con6.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Modeling of DSP-Based Receiver and Analysis Data Phase
@@ -2543,11 +2454,7 @@
                   <!-- Conference 연번7 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con7.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con7.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Technology of Channel Equalization at the Receiver in
@@ -2592,11 +2499,7 @@
                   <!-- Conference 연번8 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con8.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con8.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Design of PAM4 Transmitter in 28-nm CMOS Technology
@@ -2638,11 +2541,7 @@
                   <!-- Conference 연번9 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con9.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con9.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           An Analysis of 32-Gb/s and Full-Rate Phase
@@ -2685,11 +2584,7 @@
                   <!-- Conference 연번10 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con10.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con10.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Hardware and Software Co-Simulation Methodology for
@@ -2733,11 +2628,7 @@
                   <!-- Conference 연번11 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con11.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con11.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Analysis of ADC Quantization Effect in
@@ -2782,11 +2673,7 @@
                   <!-- Conference 제출예정 연번2 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/conn2.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/conn2.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Late Breaking Results: A General Purpose
@@ -2833,11 +2720,7 @@
                   <!-- Conference 연번12 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con12.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con12.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Vertical AND Cell Package : AND CiM 을 통한 BNN 운용
@@ -2996,11 +2879,7 @@
                   <!-- Conference 연번13 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con13.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con13.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Late Breaking Results: A General Purpose
@@ -3153,11 +3032,7 @@
                   <!-- Conference 연번3 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con3.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con3.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Phase Domain Response 분석을 통한 Injection-Locked
@@ -3209,11 +3084,7 @@
                   <!-- Conference 연번4 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con4.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con4.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           PDR 기반 Injection Point에 따른 Injection-Locked
@@ -3259,11 +3130,7 @@
                   <!-- Conference 연번5 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/con5.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/con5.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           Analysis of Channel Equalization on High-Speed Serial
@@ -3307,11 +3174,7 @@
                   <!-- Conference 제출예정 연번1 -->
                   <div class="col-md-6">
                     <div class="card pub-card mb-4">
-                      <img
-                        src="img/conn1.png"
-                        class="card-img-top"
-                        alt="..."
-                      />
+                      <img src="img/conn1.png" class="card-img-top" alt="..." />
                       <div class="card-body">
                         <h5 class="card-title">
                           IGA: A General Purpose Compute-in-Memory Architecture
@@ -4756,6 +4619,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     ></script>
     <!-- Custom js -->
+    <script src="js/update_award.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
