news gallery 수상실적 상세 json으로 업데이트

--- a/news_gallery.html
+++ b/news_gallery.html
@@ -231,5 +231,6 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
     ></script>
     <script src="js/script.js"></script>
+    <script src="js/update_detail_award.js"></script>
   </body>
 </html>
