news gallery detail 페이지 모든 정보 보이게

--- a/news_gallery.html
+++ b/news_gallery.html
@@ -120,7 +120,7 @@
 
     <div class="container gallery-detail">
       <div class="row">
-        <h2>Gallery</h2>
+        <h2>News Gallery</h2>
 
         <div class="col-12 col-lg-4">
           <div class="card">
