유튜브 영상 임베드

--- a/index.html
+++ b/index.html
@@ -330,6 +330,15 @@
                 추민성 교수)"</a
               >
             </h5>
+            <div class="iframe-container">
+              <iframe
+                class="video-embed"
+                src="https://www.youtube.com/embed/8XNEn5FGGIY"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
         </div>
       </div>
