--- a/index.html
+++ b/index.html
@@ -1312,17 +1312,19 @@
                     </div>
                     <div class="user-card-info">
                       <h2>Hanyang University Erica</h2>
-                      <p><span>홍갑규</span></p>
-                      <p><span>박시원</span></p>
+                      <p><span><b>4학년</b></span></p>                      
                       <p><span>김승현</span></p>
-                      <p><span>박문석</span></p>
+                      <p><span></span></p>
+                      
+                      <p><span><b>3학년</b></span></p> 
                       <p><span>이진호</span></p>
                       <p><span>정보성</span></p>
                       <p><span>이도형</span></p>
                       <p><span>최재현</span></p>
                       <p><span>원지섭</span></p>
-                      <p><span>이동욱</span></p>
-                      <p><span>정현우</span></p>
+                      <p><span>박문석</span></p>
+                      <p><span>박계륜</span></p>
+
                     </div>
                   </div>
                 </div>
