--- a/index.html
+++ b/index.html
@@ -1052,15 +1052,68 @@
                       <img src="img/empty-profile-img.jpg" alt="" />
                     </div>
                     <div class="user-card-info">
-                      <h2>So-Yeon Gwon</h2>
+                      <h2>So-Yeon Kwon</h2>
                       <p><span>Research Interests</span>Digital PIM</p>
                       <p><span>Tape-out Schedule</span>2024.07 (28-nm S)</p>
-                      <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
-                      <p><span>Email</span>{EMAIL ADRESS}@hanyang.ac.kr</p>
+                      <p>
+                        <span>Details</span>Received a B.S. degree in the school
+                        of Applied Physics at Hanyang University, Ansan, South Korea. 
+                        She is currently pursuing a M.S. degree in the school of electrical
+                        engineering at Hanyang University, Ansan, South Korea.
+                        Her research interests include artificial intelligence
+                        hardware design and processing in memory (PIM).
+                      </p>
+                      <p><span>Email</span>sykwon00@hanyang.ac.kr
+                      </p>
                     </div>
                   </div>
                 </div>
               </div>
+              <div class="wrapper">
+                <div class="user-card">
+                  <div class="user-card-img">
+                    <img src="img/empty-profile-img.jpg" alt="" />
+                  </div>
+                  <div class="user-card-info">
+                    <h2>In-Ho Han</h2>
+                    <p><span>Research Interests</span>PLL</p>
+                    <p><span>Tape-out Schedule</span>2024.07 (28-nm S)</p>
+                    <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
+                    <p><span>Email</span>inho0303@hanyang.ac.kr</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="wrapper">
+              <div class="user-card">
+                <div class="user-card-img">
+                  <img src="img/empty-profile-img.jpg" alt="" />
+                </div>
+                <div class="user-card-info">
+                  <h2>Jung-Min Ju</h2>
+                  <p><span>Research Interests</span>PLL</p>
+                  <p><span>Tape-out Schedule</span>2024.07 (28-nm S)</p>
+                  <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
+                  <p><span>Email</span>{EMAIL ADRESS}@hanyang.ac.kr</p>
+                </div>
+              </div>
+            </div>
+            <div class="wrapper">
+              <div class="user-card">
+                <div class="user-card-img">
+                  <img src="img/empty-profile-img.jpg" alt="" />
+                </div>
+                <div class="user-card-info">
+                  <h2>TBD</h2>
+                  <p><span>Research Interests</span></p>
+                  <p><span>Tape-out Schedule</span>2024.0</p>
+                  <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
+                  <p><span>Email</span>{EMAIL ADRESS}@hanyang.ac.kr</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          
 
               <!-- Undergraduate Researchers -->
               <h3 id="undergraduate">Undergraduate Researchers</h3>
@@ -1315,7 +1368,7 @@
                       <p><span><b>4학년</b></span></p>                      
                       <p><span>김승현</span></p>
                       <p><span></span></p>
-                      
+
                       <p><span><b>3학년</b></span></p> 
                       <p><span>이진호</span></p>
                       <p><span>정보성</span></p>
