--- a/index.html
+++ b/index.html
@@ -1366,17 +1366,17 @@
                     <div class="user-card-info">
                       <h2>Hanyang University Erica</h2>
                       <p><span><b>4학년</b></span></p>                      
-                      <p><span>김승현</span></p>
+                      <p><span>김승현 (tbd)</span></p>
                       <p><span></span></p>
 
                       <p><span><b>3학년</b></span></p> 
-                      <p><span>이진호</span></p>
-                      <p><span>정보성</span></p>
-                      <p><span>이도형</span></p>
-                      <p><span>최재현</span></p>
-                      <p><span>원지섭</span></p>
-                      <p><span>박문석</span></p>
-                      <p><span>박계륜</span></p>
+                      <p><span>이진호 (pim)</span></p>
+                      <p><span>정보성 (analog)</span></p>
+                      <p><span>이도형 (CDR)</span></p>
+                      <p><span>최재현 (analog)</span></p>
+                      <p><span>원지섭 (analog)</span></p>
+                      <p><span>박문석 (pim)</span></p>
+                      <p><span>박계륜 (tbd)</span></p>
 
                     </div>
                   </div>
