--- a/index.html
+++ b/index.html
@@ -1095,6 +1095,7 @@
                       <p><span>Email</span>{EMAIL ADRESS}@hanyang.ac.kr</p>
                     </div>
                   </div>
+                </div>
                 <div class="wrapper">
                   <div class="user-card">
                     <div class="user-card-img">
