--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                     <div class="user-card-info">
                       <h2>So-Yeon Kwon</h2>
                       <p><span>Research Interests</span>Digital PIM</p>
-                      <p><span>Tape-out Schedule</span>2024.07 (28-nm S)</p>
+                      <p><span>Tape-out Schedule</span>2024.</p>
                       <p>
                         <span>Details</span>Received a B.S. degree in the school
                         of Applied Physics at Hanyang University, Ansan, South Korea. 
@@ -1076,7 +1076,7 @@
                     <div class="user-card-info">
                       <h2>In-Ho Han</h2>
                       <p><span>Research Interests</span>PLL</p>
-                      <p><span>Tape-out Schedule</span>2024.07 (28-nm S)</p>
+                      <p><span>Tape-out Schedule</span>2024.</p>
                       <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
                       <p><span>Email</span>inho0303@hanyang.ac.kr</p>
                     </div>
@@ -1090,7 +1090,7 @@
                     <div class="user-card-info">
                       <h2>Jung-Min Ju</h2>
                       <p><span>Research Interests</span>PLL</p>
-                      <p><span>Tape-out Schedule</span>2024.07 (28-nm S)</p>
+                      <p><span>Tape-out Schedule</span>2024.</p>
                       <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
                       <p><span>Email</span>{EMAIL ADRESS}@hanyang.ac.kr</p>
                     </div>
@@ -1104,7 +1104,7 @@
                     <div class="user-card-info">
                       <h2>TBD</h2>
                       <p><span>Research Interests</span></p>
-                      <p><span>Tape-out Schedule</span>2024.0</p>
+                      <p><span>Tape-out Schedule</span>2024.</p>
                       <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
                       <p><span>Email</span>{EMAIL ADRESS}@hanyang.ac.kr</p>
                     </div>
