--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
                       <h2>In-Ho Han</h2>
                       <p><span>Research Interests</span>PLL</p>
                       <p><span>Tape-out Schedule</span>2024.</p>
-                      <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
+                      <p><span>Details</span>Pursuing a Bachelor's degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. He will join the HPIC Design Lab. in the fall semester of 2024.</p>
                       <p><span>Email</span>inho0303@hanyang.ac.kr</p>
                     </div>
                   </div>
@@ -1091,7 +1091,7 @@
                       <h2>Jung-Min Ju</h2>
                       <p><span>Research Interests</span>PLL</p>
                       <p><span>Tape-out Schedule</span>2024.</p>
-                      <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
+                      <p><span>Details</span>Pursuing a Bachelor's degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. He will join the HPIC Design Lab. in the fall semester of 2024.</p>
                       <p><span>Email</span>{EMAIL ADRESS}@hanyang.ac.kr</p>
                     </div>
                   </div>
@@ -1102,11 +1102,18 @@
                       <img src="img/empty-profile-img.jpg" alt="" />
                     </div>
                     <div class="user-card-info">
-                      <h2>TBD</h2>
-                      <p><span>Research Interests</span></p>
-                      <p><span>Tape-out Schedule</span>2024.</p>
-                      <p><span>Details</span>{PERSONAL DETAILS HERE}</p>
-                      <p><span>Email</span>{EMAIL ADRESS}@hanyang.ac.kr</p>
+                      <h2>Open Positions. No prerequisite!</h2>
+                      <p>
+                        <span>Research Interests</span>
+                      </p>
+                      <p>
+                        <span>Tape-out Schedule</span>
+                      </p>
+                      <p>
+                        <span>Achievements</span>
+                      </p>
+                      <p><span>Details</span></p>
+                      <p><span>Email</span></p>
                     </div>
                   </div>
                 </div>
