--- a/index.html
+++ b/index.html
@@ -1399,6 +1399,27 @@
                     </div>
                   </div>
                 </div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <div class="user-card-img">
+                      <img src="img/empty-profile-img.jpg" alt="" />
+                    </div>
+                    <div class="user-card-info">
+                      <h2>Open Positions. No prerequisite!</h2>
+                      <p>
+                        <span>Research Interests</span>
+                      </p>
+                      <p>
+                        <span>Tape-out Schedule</span>
+                      </p>
+                      <p>
+                        <span>Achievements</span>
+                      </p>
+                      <p><span>Details</span></p>
+                      <p><span>Email</span></p>
+                    </div>
+                  </div>
+                </div>
               </div>
 
               <h3 class="h3-items" id="alumni">Alumni</h3>
