--- a/index.html
+++ b/index.html
@@ -1102,7 +1102,7 @@
                       <img src="img/empty-profile-img.jpg" alt="" />
                     </div>
                     <div class="user-card-info">
-                      <h2>Open Positions. No prerequisite!</h2>
+                      <h2>Open Positions.</h2>
                       <p>
                         <span>Research Interests</span>
                       </p>
