--- a/index.html
+++ b/index.html
@@ -1085,14 +1085,14 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <div class="user-card-img">
-                      <img src="img/empty-profile-img.jpg" alt="" />
+                      <img src="img/dh-kim-profile-image.jpg" alt="" />
                     </div>
                     <div class="user-card-info">
-                      <h2>Jung-Min Ju</h2>
-                      <p><span>Research Interests</span>PLL</p>
+                      <h2>Dong-Ho Kim</h2>
+                      <p><span>Research Interests</span>DSP-based Transmitter</p>
                       <p><span>Tape-out Schedule</span>2024.</p>
-                      <p><span>Details</span>Pursuing a Bachelor's degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. He will join the HPIC Design Lab. in the fall semester of 2024.</p>
-                      <p><span>Email</span>{EMAIL ADRESS}@hanyang.ac.kr</p>
+                      <p><span>Details</span>Received a B.S. degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. His research interests interests include DSP-DAC based transmitter.</p>
+                      <p><span>Email</span>dpdl112@hanyang.ac.kr</p>
                     </div>
                   </div>
                 </div>
