--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <div class="user-card-img">
-                      <img src="img/jg-lee-profile-img.jpg" alt="" />
+                      <img src="img/jg-lee-profile-img.jpeg" alt="" />
                     </div>
                     <div class="user-card-info">
                       <h2>Jae-Gun Lee</h2>
@@ -1268,7 +1268,7 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <div class="user-card-img">
-                      <img src="img/sm-jin-profile-img.png" alt="" />
+                      <img src="img/sm-jin-profile-img.jpg" alt="" />
                     </div>
                     <div class="user-card-info">
                       <h2>Seung-Mo Jin</h2>
