--- a/index.html
+++ b/index.html
@@ -1071,13 +1071,27 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <div class="user-card-img">
-                      <img src="img/empty-profile-img.jpg" alt="" />
+                      <img src="img/ih-han-profile-img.jpg" alt="" />
                     </div>
                     <div class="user-card-info">
                       <h2>In-Ho Han</h2>
                       <p><span>Research Interests</span>PLL</p>
                       <p><span>Tape-out Schedule</span>2024.</p>
-                      <p><span>Details</span>Pursuing a Bachelor's degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. He will join the HPIC Design Lab. in the fall semester of 2024.</p>
+                      <p><span>Details</span>Received a B.S. degree in electrical engineering from Gachon University, Sungnam, South Korea. He is currently pursuing a M.S. degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. His research interests include analog and digital circuit designs of phase-locked-loop (PLL).</p>
+                      <p><span>Email</span>inho0303@hanyang.ac.kr</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="wrapper">
+                  <div class="user-card">
+                    <div class="user-card-img">
+                      <img src="img/sh-gong-profile-image.jpg" alt="" />
+                    </div>
+                    <div class="user-card-info">
+                      <h2>Seung-Hwan Gong</h2>
+                      <p><span>Research Interests</span>CDR, DSP-based Receiver</p>
+                      <p><span>Tape-out Schedule</span>2024.</p>
+                      <p><span>Details</span>Received a B.S. degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. His research interests interests include  CDR, DSP-based Receiver.</p>
                       <p><span>Email</span>inho0303@hanyang.ac.kr</p>
                     </div>
                   </div>
