--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
                 <div class="wrapper">
                   <div class="user-card">
                     <div class="user-card-img">
-                      <img src="img/empty-profile-img.jpg" alt="" />
+                      <img src="img/sw-kwon-profile-image.jpeg" alt="" />
                     </div>
                     <div class="user-card-info">
                       <h2>So-Yeon Kwon</h2>
