--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
                       <p><span>Research Interests</span>CDR, DSP-based Receiver</p>
                       <p><span>Tape-out Schedule</span>2024.</p>
                       <p><span>Details</span>Received a B.S. degree in the school of electrical engineering at Hanyang University, Ansan, South Korea. His research interests interests include  CDR, DSP-based Receiver.</p>
-                      <p><span>Email</span>inho0303@hanyang.ac.kr</p>
+                      <p><span>Email</span>fire051324@gmail.com</p>
                     </div>
                   </div>
                 </div>
@@ -1396,6 +1396,7 @@
                       <p><span>원지섭 (analog)</span></p>
                       <p><span>박문석 (pim)</span></p>
                       <p><span>박계륜 (tbd)</span></p>
+                      <p><span>최재진 (tbd)</span></p>
 
                     </div>
                   </div>
